--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
   <div class="wrapper">
     <header>
       <h1>RSVP</h1>
-      <p>A Treehouse App</p>
+      <p>A Basic Javascript Application</p>
       <form id="registrar">
         <input type="text" name="name" placeholder="Invite Someone">
         <button type="submit" name="submit" value="submit">Submit</button>
@@ -23,5 +23,6 @@
       <ul id="invitedList"></ul>	
     </div>
   </div>
+  <script type="text/javascript" src="app.js"></script>
 </body>
 </html>
